002_custom-metric-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prometheus-metrics-app
  namespace: keda-test
  labels:
    app: prometheus-metrics-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-metrics-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prometheus-metrics-app
    spec:
      containers:
        - name: prometheus-metrics-app
          image: 'ghcr.io/rhobs/prometheus-example-app:0.4.1'
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
