002_custom-metric-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-prometheus
spec:
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: prometheus-metrics-app
