002_custom-metric-app/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-route
  labels:
    app: prometheus-metrics
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: svc-prometheus
    weight: 100
  wildcardPolicy: None
